# madthinker-public-samples

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  config.cmd  config.env  config.env.local  config.sh  pyproject.toml  run.cmd  run.sh  showdata.cmd  showdata.sh
.github/workflows/: ci.yml
docs/: TCA_Catch_Reports_Export_API.md  TCA_Export_Client_DB_Import_Guide.md  TCA_Export_Reference.md  TCA_Export_SDK_API_Reference.md
docs/superpowers/specs/: 2026-06-14-photo-download-design.md
src/madthinker_export/: __init__.py  __main__.py  client.py  config.py  photos.py  probe.py  store.py  sync.py
tests/: conftest.py  test_client.py  test_config.py  test_main.py  test_photos.py  test_probe.py  test_store.py  test_sync.py
