[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "madthinker-export"
version = "0.1.0"
description = "Reference consumer for the MadThinker Catch Reports Export API"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]

[project.scripts]
madthinker-export = "madthinker_export.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
